project.output
Nonterminals useless in grammar

    insert_stmt
    value_list
    id_or_num


Terminals unused in grammar

    GROUPBY
    INSERT
    VALUES


Rules useless in grammar

   55 insert_stmt: INSERT ID '(' column_list ')' VALUES value_list

   56 value_list: '(' id_or_num ')'
   57           | '(' id_or_num ')' ',' value_list

   58 id_or_num: values
   59          | values ',' id_or_num


State 100 conflicts: 2 shift/reduce
State 101 conflicts: 2 shift/reduce


Grammar

    0 $accept: line $end

    1 line: expr '\n'
    2     | expr select_stmt

    3 expr: CREATETABLE ID '(' table_def ')'

    4 table_def: column_def
    5          | column_def ',' table_constraint_def
    6          | column_def ',' table_def

    7 column_def: ID datatype column_costraint_def
    8           | ID datatype

    9 datatype: INTEGER
   10         | INTEGER '(' NUM ')'
   11         | FLOAT '(' NUM ')'
   12         | BOOLEAN
   13         | VARCHAR '(' NUM ')'
   14         | DATE

   15 column_costraint_def: column_costraint
   16                     | column_costraint column_costraint

   17 column_costraint: NOTNULL
   18                 | PRIMARYKEY
   19                 | UNIQUE
   20                 | FOREIGNKEY REFERENCES ID '(' ID ')'
   21                 | CHECK '(' condition ')'

   22 table_constraint_def: table_constraint
   23                     | table_constraint ',' table_constraint_def

   24 table_constraint: NOTNULL '(' parameters ')'
   25                 | UNIQUE '(' parameters ')'
   26                 | PRIMARYKEY '(' parameters ')'
   27                 | CONSTRAINT ID FOREIGNKEY '(' ID ')' REFERENCES ID '(' ID ')'

   28 parameters: ID
   29           | ID ',' parameters

   30 select_stmt: SELECT select_list FROM ID where_clause

   31 select_list: ','
   32            | column_list

   33 column_list: ID datatype
   34            | ID ',' column_list

   35 where_clause: ε
   36             | WHERE condition

   37 condition: values comparison_op values
   38          | values numeric_comparison_op NUM
   39          | NUM numeric_comparison_op values
   40          | condition AND condition
   41          | condition OR condition

   42 values: ID
   43       | TRUE
   44       | FALSE

   45 comparison_op: LS
   46              | GR
   47              | GE
   48              | LE
   49              | EQ
   50              | NE

   51 numeric_comparison_op: LS
   52                      | GR
   53                      | GE
   54                      | LE


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 1
    '(' (40) 3 10 11 13 20 21 24 25 26 27
    ')' (41) 3 10 11 13 20 21 24 25 26 27
    ',' (44) 5 6 23 29 31 34
    error (256)
    CREATETABLE (258) 3
    SELECT (259) 30
    FROM (260) 30
    WHERE (261) 36
    GROUPBY (262)
    INSERT (263)
    LS (264) 45 51
    GR (265) 46 52
    GE (266) 47 53
    LE (267) 48 54
    EQ (268) 49
    NE (269) 50
    AND (270) 40
    OR (271) 41
    FALSE (272) 44
    TRUE (273) 43
    VALUES (274)
    BOOLEAN (275) 12
    VARCHAR (276) 13
    INTEGER (277) 9 10
    CONSTRAINT (278) 27
    FLOAT (279) 11
    CHECK (280) 21
    DATE (281) 14
    NUM (282) 10 11 13 38 39
    ID (283) 3 7 8 20 27 28 29 30 33 34 42
    NOTNULL (284) 17 24
    UNIQUE (285) 19 25
    PRIMARYKEY (286) 18 26
    FOREIGNKEY (287) 20 27
    REFERENCES (288) 20 27


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    line (39)
        on left: 1 2
        on right: 0
    expr (40)
        on left: 3
        on right: 1 2
    table_def (41)
        on left: 4 5 6
        on right: 3 6
    column_def (42)
        on left: 7 8
        on right: 4 5 6
    datatype (43)
        on left: 9 10 11 12 13 14
        on right: 7 8 33
    column_costraint_def (44)
        on left: 15 16
        on right: 7
    column_costraint (45)
        on left: 17 18 19 20 21
        on right: 15 16
    table_constraint_def (46)
        on left: 22 23
        on right: 5 23
    table_constraint (47)
        on left: 24 25 26 27
        on right: 22 23
    parameters (48)
        on left: 28 29
        on right: 24 25 26 29
    select_stmt (49)
        on left: 30
        on right: 2
    select_list (50)
        on left: 31 32
        on right: 30
    column_list (51)
        on left: 33 34
        on right: 32 34
    where_clause (52)
        on left: 35 36
        on right: 30
    condition (53)
        on left: 37 38 39 40 41
        on right: 21 36 40 41
    values (54)
        on left: 42 43 44
        on right: 37 38 39
    comparison_op (55)
        on left: 45 46 47 48 49 50
        on right: 37
    numeric_comparison_op (56)
        on left: 51 52 53 54
        on right: 38 39


State 0

    0 $accept: • line $end

    CREATETABLE  shift, and go to state 1

    line  go to state 2
    expr  go to state 3


State 1

    3 expr: CREATETABLE • ID '(' table_def ')'

    ID  shift, and go to state 4


State 2

    0 $accept: line • $end

    $end  shift, and go to state 5


State 3

    1 line: expr • '\n'
    2     | expr • select_stmt

    SELECT  shift, and go to state 6
    '\n'    shift, and go to state 7

    select_stmt  go to state 8


State 4

    3 expr: CREATETABLE ID • '(' table_def ')'

    '('  shift, and go to state 9


State 5

    0 $accept: line $end •

    $default  accept


State 6

   30 select_stmt: SELECT • select_list FROM ID where_clause

    ID   shift, and go to state 10
    ','  shift, and go to state 11

    select_list  go to state 12
    column_list  go to state 13


State 7

    1 line: expr '\n' •

    $default  reduce using rule 1 (line)


State 8

    2 line: expr select_stmt •

    $default  reduce using rule 2 (line)


State 9

    3 expr: CREATETABLE ID '(' • table_def ')'

    ID  shift, and go to state 14

    table_def   go to state 15
    column_def  go to state 16


State 10

   33 column_list: ID • datatype
   34            | ID • ',' column_list

    BOOLEAN  shift, and go to state 17
    VARCHAR  shift, and go to state 18
    INTEGER  shift, and go to state 19
    FLOAT    shift, and go to state 20
    DATE     shift, and go to state 21
    ','      shift, and go to state 22

    datatype  go to state 23


State 11

   31 select_list: ',' •

    $default  reduce using rule 31 (select_list)


State 12

   30 select_stmt: SELECT select_list • FROM ID where_clause

    FROM  shift, and go to state 24


State 13

   32 select_list: column_list •

    $default  reduce using rule 32 (select_list)


State 14

    7 column_def: ID • datatype column_costraint_def
    8           | ID • datatype

    BOOLEAN  shift, and go to state 17
    VARCHAR  shift, and go to state 18
    INTEGER  shift, and go to state 19
    FLOAT    shift, and go to state 20
    DATE     shift, and go to state 21

    datatype  go to state 25


State 15

    3 expr: CREATETABLE ID '(' table_def • ')'

    ')'  shift, and go to state 26


State 16

    4 table_def: column_def •
    5          | column_def • ',' table_constraint_def
    6          | column_def • ',' table_def

    ','  shift, and go to state 27

    $default  reduce using rule 4 (table_def)


State 17

   12 datatype: BOOLEAN •

    $default  reduce using rule 12 (datatype)


State 18

   13 datatype: VARCHAR • '(' NUM ')'

    '('  shift, and go to state 28


State 19

    9 datatype: INTEGER •
   10         | INTEGER • '(' NUM ')'

    '('  shift, and go to state 29

    $default  reduce using rule 9 (datatype)


State 20

   11 datatype: FLOAT • '(' NUM ')'

    '('  shift, and go to state 30


State 21

   14 datatype: DATE •

    $default  reduce using rule 14 (datatype)


State 22

   34 column_list: ID ',' • column_list

    ID  shift, and go to state 10

    column_list  go to state 31


State 23

   33 column_list: ID datatype •

    $default  reduce using rule 33 (column_list)


State 24

   30 select_stmt: SELECT select_list FROM • ID where_clause

    ID  shift, and go to state 32


State 25

    7 column_def: ID datatype • column_costraint_def
    8           | ID datatype •

    CHECK       shift, and go to state 33
    NOTNULL     shift, and go to state 34
    UNIQUE      shift, and go to state 35
    PRIMARYKEY  shift, and go to state 36
    FOREIGNKEY  shift, and go to state 37

    $default  reduce using rule 8 (column_def)

    column_costraint_def  go to state 38
    column_costraint      go to state 39


State 26

    3 expr: CREATETABLE ID '(' table_def ')' •

    $default  reduce using rule 3 (expr)


State 27

    5 table_def: column_def ',' • table_constraint_def
    6          | column_def ',' • table_def

    CONSTRAINT  shift, and go to state 40
    ID          shift, and go to state 14
    NOTNULL     shift, and go to state 41
    UNIQUE      shift, and go to state 42
    PRIMARYKEY  shift, and go to state 43

    table_def             go to state 44
    column_def            go to state 16
    table_constraint_def  go to state 45
    table_constraint      go to state 46


State 28

   13 datatype: VARCHAR '(' • NUM ')'

    NUM  shift, and go to state 47


State 29

   10 datatype: INTEGER '(' • NUM ')'

    NUM  shift, and go to state 48


State 30

   11 datatype: FLOAT '(' • NUM ')'

    NUM  shift, and go to state 49


State 31

   34 column_list: ID ',' column_list •

    $default  reduce using rule 34 (column_list)


State 32

   30 select_stmt: SELECT select_list FROM ID • where_clause

    WHERE  shift, and go to state 50

    $default  reduce using rule 35 (where_clause)

    where_clause  go to state 51


State 33

   21 column_costraint: CHECK • '(' condition ')'

    '('  shift, and go to state 52


State 34

   17 column_costraint: NOTNULL •

    $default  reduce using rule 17 (column_costraint)


State 35

   19 column_costraint: UNIQUE •

    $default  reduce using rule 19 (column_costraint)


State 36

   18 column_costraint: PRIMARYKEY •

    $default  reduce using rule 18 (column_costraint)


State 37

   20 column_costraint: FOREIGNKEY • REFERENCES ID '(' ID ')'

    REFERENCES  shift, and go to state 53


State 38

    7 column_def: ID datatype column_costraint_def •

    $default  reduce using rule 7 (column_def)


State 39

   15 column_costraint_def: column_costraint •
   16                     | column_costraint • column_costraint

    CHECK       shift, and go to state 33
    NOTNULL     shift, and go to state 34
    UNIQUE      shift, and go to state 35
    PRIMARYKEY  shift, and go to state 36
    FOREIGNKEY  shift, and go to state 37

    $default  reduce using rule 15 (column_costraint_def)

    column_costraint  go to state 54


State 40

   27 table_constraint: CONSTRAINT • ID FOREIGNKEY '(' ID ')' REFERENCES ID '(' ID ')'

    ID  shift, and go to state 55


State 41

   24 table_constraint: NOTNULL • '(' parameters ')'

    '('  shift, and go to state 56


State 42

   25 table_constraint: UNIQUE • '(' parameters ')'

    '('  shift, and go to state 57


State 43

   26 table_constraint: PRIMARYKEY • '(' parameters ')'

    '('  shift, and go to state 58


State 44

    6 table_def: column_def ',' table_def •

    $default  reduce using rule 6 (table_def)


State 45

    5 table_def: column_def ',' table_constraint_def •

    $default  reduce using rule 5 (table_def)


State 46

   22 table_constraint_def: table_constraint •
   23                     | table_constraint • ',' table_constraint_def

    ','  shift, and go to state 59

    $default  reduce using rule 22 (table_constraint_def)


State 47

   13 datatype: VARCHAR '(' NUM • ')'

    ')'  shift, and go to state 60


State 48

   10 datatype: INTEGER '(' NUM • ')'

    ')'  shift, and go to state 61


State 49

   11 datatype: FLOAT '(' NUM • ')'

    ')'  shift, and go to state 62


State 50

   36 where_clause: WHERE • condition

    FALSE  shift, and go to state 63
    TRUE   shift, and go to state 64
    NUM    shift, and go to state 65
    ID     shift, and go to state 66

    condition  go to state 67
    values     go to state 68


State 51

   30 select_stmt: SELECT select_list FROM ID where_clause •

    $default  reduce using rule 30 (select_stmt)


State 52

   21 column_costraint: CHECK '(' • condition ')'

    FALSE  shift, and go to state 63
    TRUE   shift, and go to state 64
    NUM    shift, and go to state 65
    ID     shift, and go to state 66

    condition  go to state 69
    values     go to state 68


State 53

   20 column_costraint: FOREIGNKEY REFERENCES • ID '(' ID ')'

    ID  shift, and go to state 70


State 54

   16 column_costraint_def: column_costraint column_costraint •

    $default  reduce using rule 16 (column_costraint_def)


State 55

   27 table_constraint: CONSTRAINT ID • FOREIGNKEY '(' ID ')' REFERENCES ID '(' ID ')'

    FOREIGNKEY  shift, and go to state 71


State 56

   24 table_constraint: NOTNULL '(' • parameters ')'

    ID  shift, and go to state 72

    parameters  go to state 73


State 57

   25 table_constraint: UNIQUE '(' • parameters ')'

    ID  shift, and go to state 72

    parameters  go to state 74


State 58

   26 table_constraint: PRIMARYKEY '(' • parameters ')'

    ID  shift, and go to state 72

    parameters  go to state 75


State 59

   23 table_constraint_def: table_constraint ',' • table_constraint_def

    CONSTRAINT  shift, and go to state 40
    NOTNULL     shift, and go to state 41
    UNIQUE      shift, and go to state 42
    PRIMARYKEY  shift, and go to state 43

    table_constraint_def  go to state 76
    table_constraint      go to state 46


State 60

   13 datatype: VARCHAR '(' NUM ')' •

    $default  reduce using rule 13 (datatype)


State 61

   10 datatype: INTEGER '(' NUM ')' •

    $default  reduce using rule 10 (datatype)


State 62

   11 datatype: FLOAT '(' NUM ')' •

    $default  reduce using rule 11 (datatype)


State 63

   44 values: FALSE •

    $default  reduce using rule 44 (values)


State 64

   43 values: TRUE •

    $default  reduce using rule 43 (values)


State 65

   39 condition: NUM • numeric_comparison_op values

    LS  shift, and go to state 77
    GR  shift, and go to state 78
    GE  shift, and go to state 79
    LE  shift, and go to state 80

    numeric_comparison_op  go to state 81


State 66

   42 values: ID •

    $default  reduce using rule 42 (values)


State 67

   36 where_clause: WHERE condition •
   40 condition: condition • AND condition
   41          | condition • OR condition

    AND  shift, and go to state 82
    OR   shift, and go to state 83

    $default  reduce using rule 36 (where_clause)


State 68

   37 condition: values • comparison_op values
   38          | values • numeric_comparison_op NUM

    LS  shift, and go to state 84
    GR  shift, and go to state 85
    GE  shift, and go to state 86
    LE  shift, and go to state 87
    EQ  shift, and go to state 88
    NE  shift, and go to state 89

    comparison_op          go to state 90
    numeric_comparison_op  go to state 91


State 69

   21 column_costraint: CHECK '(' condition • ')'
   40 condition: condition • AND condition
   41          | condition • OR condition

    AND  shift, and go to state 82
    OR   shift, and go to state 83
    ')'  shift, and go to state 92


State 70

   20 column_costraint: FOREIGNKEY REFERENCES ID • '(' ID ')'

    '('  shift, and go to state 93


State 71

   27 table_constraint: CONSTRAINT ID FOREIGNKEY • '(' ID ')' REFERENCES ID '(' ID ')'

    '('  shift, and go to state 94


State 72

   28 parameters: ID •
   29           | ID • ',' parameters

    ','  shift, and go to state 95

    $default  reduce using rule 28 (parameters)


State 73

   24 table_constraint: NOTNULL '(' parameters • ')'

    ')'  shift, and go to state 96


State 74

   25 table_constraint: UNIQUE '(' parameters • ')'

    ')'  shift, and go to state 97


State 75

   26 table_constraint: PRIMARYKEY '(' parameters • ')'

    ')'  shift, and go to state 98


State 76

   23 table_constraint_def: table_constraint ',' table_constraint_def •

    $default  reduce using rule 23 (table_constraint_def)


State 77

   51 numeric_comparison_op: LS •

    $default  reduce using rule 51 (numeric_comparison_op)


State 78

   52 numeric_comparison_op: GR •

    $default  reduce using rule 52 (numeric_comparison_op)


State 79

   53 numeric_comparison_op: GE •

    $default  reduce using rule 53 (numeric_comparison_op)


State 80

   54 numeric_comparison_op: LE •

    $default  reduce using rule 54 (numeric_comparison_op)


State 81

   39 condition: NUM numeric_comparison_op • values

    FALSE  shift, and go to state 63
    TRUE   shift, and go to state 64
    ID     shift, and go to state 66

    values  go to state 99


State 82

   40 condition: condition AND • condition

    FALSE  shift, and go to state 63
    TRUE   shift, and go to state 64
    NUM    shift, and go to state 65
    ID     shift, and go to state 66

    condition  go to state 100
    values     go to state 68


State 83

   41 condition: condition OR • condition

    FALSE  shift, and go to state 63
    TRUE   shift, and go to state 64
    NUM    shift, and go to state 65
    ID     shift, and go to state 66

    condition  go to state 101
    values     go to state 68


State 84

   45 comparison_op: LS •
   51 numeric_comparison_op: LS •

    NUM       reduce using rule 51 (numeric_comparison_op)
    $default  reduce using rule 45 (comparison_op)


State 85

   46 comparison_op: GR •
   52 numeric_comparison_op: GR •

    NUM       reduce using rule 52 (numeric_comparison_op)
    $default  reduce using rule 46 (comparison_op)


State 86

   47 comparison_op: GE •
   53 numeric_comparison_op: GE •

    NUM       reduce using rule 53 (numeric_comparison_op)
    $default  reduce using rule 47 (comparison_op)


State 87

   48 comparison_op: LE •
   54 numeric_comparison_op: LE •

    NUM       reduce using rule 54 (numeric_comparison_op)
    $default  reduce using rule 48 (comparison_op)


State 88

   49 comparison_op: EQ •

    $default  reduce using rule 49 (comparison_op)


State 89

   50 comparison_op: NE •

    $default  reduce using rule 50 (comparison_op)


State 90

   37 condition: values comparison_op • values

    FALSE  shift, and go to state 63
    TRUE   shift, and go to state 64
    ID     shift, and go to state 66

    values  go to state 102


State 91

   38 condition: values numeric_comparison_op • NUM

    NUM  shift, and go to state 103


State 92

   21 column_costraint: CHECK '(' condition ')' •

    $default  reduce using rule 21 (column_costraint)


State 93

   20 column_costraint: FOREIGNKEY REFERENCES ID '(' • ID ')'

    ID  shift, and go to state 104


State 94

   27 table_constraint: CONSTRAINT ID FOREIGNKEY '(' • ID ')' REFERENCES ID '(' ID ')'

    ID  shift, and go to state 105


State 95

   29 parameters: ID ',' • parameters

    ID  shift, and go to state 72

    parameters  go to state 106


State 96

   24 table_constraint: NOTNULL '(' parameters ')' •

    $default  reduce using rule 24 (table_constraint)


State 97

   25 table_constraint: UNIQUE '(' parameters ')' •

    $default  reduce using rule 25 (table_constraint)


State 98

   26 table_constraint: PRIMARYKEY '(' parameters ')' •

    $default  reduce using rule 26 (table_constraint)


State 99

   39 condition: NUM numeric_comparison_op values •

    $default  reduce using rule 39 (condition)


State 100

   40 condition: condition • AND condition
   40          | condition AND condition •
   41          | condition • OR condition

    AND  shift, and go to state 82
    OR   shift, and go to state 83

    AND       [reduce using rule 40 (condition)]
    OR        [reduce using rule 40 (condition)]
    $default  reduce using rule 40 (condition)


State 101

   40 condition: condition • AND condition
   41          | condition • OR condition
   41          | condition OR condition •

    AND  shift, and go to state 82
    OR   shift, and go to state 83

    AND       [reduce using rule 41 (condition)]
    OR        [reduce using rule 41 (condition)]
    $default  reduce using rule 41 (condition)


State 102

   37 condition: values comparison_op values •

    $default  reduce using rule 37 (condition)


State 103

   38 condition: values numeric_comparison_op NUM •

    $default  reduce using rule 38 (condition)


State 104

   20 column_costraint: FOREIGNKEY REFERENCES ID '(' ID • ')'

    ')'  shift, and go to state 107


State 105

   27 table_constraint: CONSTRAINT ID FOREIGNKEY '(' ID • ')' REFERENCES ID '(' ID ')'

    ')'  shift, and go to state 108


State 106

   29 parameters: ID ',' parameters •

    $default  reduce using rule 29 (parameters)


State 107

   20 column_costraint: FOREIGNKEY REFERENCES ID '(' ID ')' •

    $default  reduce using rule 20 (column_costraint)


State 108

   27 table_constraint: CONSTRAINT ID FOREIGNKEY '(' ID ')' • REFERENCES ID '(' ID ')'

    REFERENCES  shift, and go to state 109


State 109

   27 table_constraint: CONSTRAINT ID FOREIGNKEY '(' ID ')' REFERENCES • ID '(' ID ')'

    ID  shift, and go to state 110


State 110

   27 table_constraint: CONSTRAINT ID FOREIGNKEY '(' ID ')' REFERENCES ID • '(' ID ')'

    '('  shift, and go to state 111


State 111

   27 table_constraint: CONSTRAINT ID FOREIGNKEY '(' ID ')' REFERENCES ID '(' • ID ')'

    ID  shift, and go to state 112


State 112

   27 table_constraint: CONSTRAINT ID FOREIGNKEY '(' ID ')' REFERENCES ID '(' ID • ')'

    ')'  shift, and go to state 113


State 113

   27 table_constraint: CONSTRAINT ID FOREIGNKEY '(' ID ')' REFERENCES ID '(' ID ')' •

    $default  reduce using rule 27 (table_constraint)
